# whoopsie-kcm

./: CMakeLists.txt
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  Messages.sh  Module.cpp  Module.h  Module.ui  Version.h.cmake  kcm_whoopsie.desktop  main.cpp  whoopsie-preferences.xml
